[http] Cosmetic
Signed-off-by: Peter Kriens <peter.kriens@aqute.biz>